--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   </div>
   <hr>
   <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h3>How much you loved your experience in my page?.</h3>
+    <h2 class="getintouch">Get In Touch</h2>
+    <h3 class="cont-tril">How much you loved your experience in my page?</h3>
     <p class="contact-message">Yes we can connect, bring your website, mobile app and music production, we can talk busines and all that.</p>
     <a class="btn" href="mailto:nwekemunachi2018@gmail.com">CONTACT ME</a>
   </div>
